force-app/main/default/objects/Lead/fields/OBEF_Notes__c.field-meta.xml
<CustomField>
    <fullName>OBEF_Notes__c</fullName>
    <label>OBEF Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>