force-app/main/default/objects/Lead/fields/OBEF_Version__c.field-meta.xml
<CustomField>
    <fullName>OBEF_Version__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OBEF Version</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>