force-app/main/default/objects/Lead/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Office</label>
    <type>Checkbox</type>
</CustomField>