force-app/main/default/objects/Lead/fields/Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out</label>
    <type>Checkbox</type>
</CustomField>