force-app/main/default/objects/Lead/fields/Option_B_Choice_Selection__c.field-meta.xml
<CustomField>
    <fullName>Option_B_Choice_Selection__c</fullName>
    <label>Option B Choice Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>