force-app/main/default/objects/Lead/fields/OptionA__c.field-meta.xml
<CustomField>
    <fullName>OptionA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptionA</label>
    <type>Checkbox</type>
</CustomField>