force-app/main/default/objects/Lead/fields/OptionABiWeekly__c.field-meta.xml
<CustomField>
    <fullName>OptionABiWeekly__c</fullName>
    <formula>if(
OptionA__c == true, AgeFactorFormula_OptionA__c,

0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OptionABiWeekly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>