force-app/main/default/objects/Lead/fields/OptionB__c.field-meta.xml
<CustomField>
    <fullName>OptionB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptionB</label>
    <type>Checkbox</type>
</CustomField>