force-app/main/default/objects/Lead/fields/OptionB_Insurance_Cover__c.field-meta.xml
<CustomField>
    <fullName>OptionB_Insurance_Cover__c</fullName>
    <formula>(formula_basePay__c * VALUE(TEXT(  Option_B_Choice_Selection__c ))) / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OptionB Insurance Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>