force-app/main/default/objects/Lead/fields/OptionC__c.field-meta.xml
<CustomField>
    <fullName>OptionC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptionC</label>
    <type>Checkbox</type>
</CustomField>