force-app/main/default/objects/Lead/fields/percROTH__c.field-meta.xml
<CustomField>
    <fullName>percROTH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>percROTH</label>
    <type>Checkbox</type>
</CustomField>