force-app/main/default/objects/Lead/fields/percTSP__c.field-meta.xml
<CustomField>
    <fullName>percTSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>percTSP</label>
    <type>Checkbox</type>
</CustomField>