force-app/main/default/objects/Lead/fields/Pg10Rw03__c.field-meta.xml
<CustomField>
    <fullName>Pg10Rw03__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Pg10Rw03</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>