force-app/main/default/objects/Lead/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy #</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>