force-app/main/default/objects/Lead/fields/Policy_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Issue_Date__c</fullName>
    <label>Policy Issue Date</label>
    <type>Date</type>
</CustomField>