force-app/main/default/objects/Lead/fields/Policy_Reminder_Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Reminder_Alert_Date__c</fullName>
    <formula>Policy_Issue_Date__c +320</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Reminder Alert Date</label>
    <type>Date</type>
</CustomField>