force-app/main/default/objects/Lead/fields/pre_tax_Total__c.field-meta.xml
<CustomField>
    <fullName>pre_tax_Total__c</fullName>
    <formula>IF( TSP_Balance_No_Match__c == 0 &amp;&amp; ROTH_Contributions__c == 0, hiddenTaxFormula_IRA__c + hiddenTaxFormula_IRAFree__c, hiddentaxFormula_TSP__c +  hiddentaxformula_ROTHTSP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pre-tax Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>