force-app/main/default/objects/Lead/fields/Predicted_Pension__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Pension__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Predicted Pension</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>