force-app/main/default/objects/Lead/fields/Prefer_Text__c.field-meta.xml
<CustomField>
    <fullName>Prefer_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the contact prefer text over email or phone call?</description>
    <inlineHelpText>Does the contact prefer text over email or phone call?</inlineHelpText>
    <label>Prefer Text?</label>
    <type>Checkbox</type>
</CustomField>