force-app/main/default/objects/Lead/fields/President__c.field-meta.xml
<CustomField>
    <fullName>President__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>President</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>