force-app/main/default/objects/Lead/fields/President_Phone__c.field-meta.xml
<CustomField>
    <fullName>President_Phone__c</fullName>
    <label>President Phone</label>
    <type>Phone</type>
</CustomField>