force-app/main/default/objects/Lead/fields/Primary_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Primary_Scenario__c</fullName>
    <label>Primary Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Scenario 1</fullName>
            </value>
            <value>
                <fullName>Scenario 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>