force-app/main/default/objects/Lead/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <label>Referred By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>