force-app/main/default/objects/Lead/fields/Remaining_Years__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Years__c</fullName>
    <label>Remaining Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>