force-app/main/default/objects/Lead/fields/Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>Reset_Date__c</fullName>
    <label>Reset Date</label>
    <type>Date</type>
</CustomField>