force-app/main/default/objects/Lead/fields/Reset_Time__c.field-meta.xml
<CustomField>
    <fullName>Reset_Time__c</fullName>
    <label>Reset Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Picklist</valueSetName>
    </valueSet>
</CustomField>