force-app/main/default/objects/Lead/fields/Rollover_Task_Generated__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Task_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollover Task Generated</label>
    <type>Checkbox</type>
</CustomField>