force-app/main/default/objects/Lead/fields/ROTH_Contributions__c.field-meta.xml
<CustomField>
    <fullName>ROTH_Contributions__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Tax-Free TSP Balance ($)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>