force-app/main/default/objects/Lead/fields/ROTH_Total__c.field-meta.xml
<CustomField>
    <fullName>ROTH_Total__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>ROTH Total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>