force-app/main/default/objects/Lead/fields/ROTH_TSP_Contribution__c.field-meta.xml
<CustomField>
    <fullName>ROTH_TSP_Contribution__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>ROTH TSP Contribution (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>