force-app/main/default/objects/Lead/fields/Scenario1_Primary__c.field-meta.xml
<CustomField>
    <fullName>Scenario1_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scenario1 Primary</label>
    <type>Checkbox</type>
</CustomField>