force-app/main/default/objects/Lead/fields/Scenario1_YOS_Manual__c.field-meta.xml
<CustomField>
    <fullName>Scenario1_YOS_Manual__c</fullName>
    <description>Manual &quot;Times (x) Years of Service&quot; override for Scenario 1, entered on the FERS workbook pages. NOT maintained by the YOS Flow, so a manual what-if entry survives and is shared across all workbook pages. When blank, the pages fall back to the Flow-computed Scenario1_YOS__c.</description>
    <inlineHelpText>Manual Years of Service override for Scenario 1. Leave blank to use the auto-calculated value.</inlineHelpText>
    <label>Scenario 1 YOS (Manual Override)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>