force-app/main/default/objects/Lead/fields/Scenario2_Primary__c.field-meta.xml
<CustomField>
    <fullName>Scenario2_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scenario2 Primary</label>
    <type>Checkbox</type>
</CustomField>