force-app/main/default/objects/Lead/fields/Scenario2_Retirement_Age__c.field-meta.xml
<CustomField>
    <fullName>Scenario2_Retirement_Age__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Scenario2 Retirement Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>