force-app/main/default/objects/Lead/fields/ShowTotal__c.field-meta.xml
<CustomField>
    <fullName>ShowTotal__c</fullName>
    <formula>IF(
TSP_Balance_No_Match__c != 0 &amp;&amp; TEXT( AnnualWithdraw1__c ) == &apos;&apos; , true,
IF(
TSP_Balance_No_Match__c != 0 &amp;&amp; TEXT(taxRate5_Picklist__c) == &apos;&apos;, true,
IF(
ROTH_Contributions__c != 0 &amp;&amp; TEXT( AnnualWithdraw2__c ) == &apos;&apos;, true,

false
)))</formula>
    <label>ShowTotal</label>
    <type>Checkbox</type>
</CustomField>