force-app/main/default/objects/Lead/fields/Snapshot_Flow_Completed__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Flow_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculated</label>
    <type>Checkbox</type>
</CustomField>