force-app/main/default/objects/Lead/fields/Special_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Special_Group_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Group Member</label>
    <type>Checkbox</type>
</CustomField>