force-app/main/default/objects/Lead/fields/Specialist__c.field-meta.xml
<CustomField>
    <fullName>Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specialist</label>
    <type>Checkbox</type>
</CustomField>