force-app/main/default/objects/Lead/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Spouse</relationshipLabel>
    <relationshipName>Spouses</relationshipName>
    <type>Lookup</type>
</CustomField>