force-app/main/default/objects/Lead/fields/Spouse_Option__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Option__c</fullName>
    <label>Spouse Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maximum</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
                <default>true</default>
                <label>Minimum</label>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>