force-app/main/default/objects/Lead/fields/Spouse_Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Social_Security__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Spouse Social Security</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>