force-app/main/default/objects/Lead/fields/Standard_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Standard_Monthly__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Standard Monthly</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>