force-app/main/default/objects/Lead/fields/Starting_Age__c.field-meta.xml
<CustomField>
    <fullName>Starting_Age__c</fullName>
    <label>Starting Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>