force-app/main/default/objects/Lead/fields/Starting_Age_Set__c.field-meta.xml
<CustomField>
    <fullName>Starting_Age_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Starting Age Set</label>
    <type>Checkbox</type>
</CustomField>