force-app/main/default/objects/Lead/fields/subTotal__c.field-meta.xml
<CustomField>
    <fullName>subTotal__c</fullName>
    <formula>(Predicted_Social_Security__c + Predicted_Pension__c + Spouse_Social_Security__c + Spouse_Pension__c + Additional_Income1__c + Additional_Income2__c + Additional_Income3__c) - (totalTaxes_Currency__c + Total_Health__c + Additional_Insurance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>subTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>