force-app/main/default/objects/Lead/fields/taxRate2_Picklist__c.field-meta.xml
<CustomField>
    <fullName>taxRate2_Picklist__c</fullName>
    <label>taxRate2_Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>taxRate1</valueSetName>
    </valueSet>
</CustomField>