force-app/main/default/objects/Lead/fields/taxRate3_Picklist__c.field-meta.xml
<CustomField>
    <fullName>taxRate3_Picklist__c</fullName>
    <label>taxRate3_Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>taxRate2</valueSetName>
    </valueSet>
</CustomField>