force-app/main/default/objects/Lead/fields/Total_Health__c.field-meta.xml
<CustomField>
    <fullName>Total_Health__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total_Health</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>