force-app/main/default/objects/Lead/fields/total_Years__c.field-meta.xml
<CustomField>
    <fullName>total_Years__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>OptionB Total Dollars</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>