force-app/main/default/objects/Lead/fields/totalExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalExpenses__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>totalExpenses</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>