force-app/main/default/objects/Lead/fields/totalTaxes__c.field-meta.xml
<CustomField>
    <fullName>totalTaxes__c</fullName>
    <formula>hiddenTaxFormula1__c + hiddenTaxFormula2__c + hiddenTaxFormula3__c + hiddenTaxFormula4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>totalTaxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>