force-app/main/default/objects/Lead/fields/totalTaxes_Currency__c.field-meta.xml
<CustomField>
    <fullName>totalTaxes_Currency__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>totalTaxes_Currency</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>