force-app/main/default/objects/Lead/fields/TSP_Balance__c.field-meta.xml
<CustomField>
    <fullName>TSP_Balance__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>TSP Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>