force-app/main/default/objects/Lead/fields/TSP_Contribution__c.field-meta.xml
<CustomField>
    <fullName>TSP_Contribution__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>TSP Contribution (%)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>