force-app/main/default/objects/Lead/fields/Union_Association__c.field-meta.xml
<CustomField>
    <fullName>Union_Association__c</fullName>
    <label>Union / Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>