force-app/main/default/objects/Lead/fields/Union_Website__c.field-meta.xml
<CustomField>
    <fullName>Union_Website__c</fullName>
    <label>Union Website</label>
    <type>Url</type>
</CustomField>