force-app/main/default/objects/Lead/fields/Workbook_Version__c.field-meta.xml
<CustomField>
    <fullName>Workbook_Version__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Workbook Version</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>