force-app/main/default/objects/Lead/fields/X2nd_Policy__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Policy__c</fullName>
    <label>2nd Policy #</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>