force-app/main/default/objects/Lead/fields/X2nd_Policy_Carrier__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Policy_Carrier__c</fullName>
    <label>2nd Policy Carrier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Ameritas</fullName>
            </value>
            <value>
                <fullName>Athene - Annexus</fullName>
            </value>
            <value>
                <fullName>Athene - National</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>CBL</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>EquiTrust - Bridge</fullName>
            </value>
            <value>
                <fullName>Fidelity &amp; Guaranty</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Ibexis - Annuity</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>Mutual of Omaha</fullName>
            </value>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>Nationwide CareMatters II</fullName>
            </value>
            <value>
                <fullName>Nationwide CareMatters Together</fullName>
            </value>
            <value>
                <fullName>North American - Annexus</fullName>
            </value>
            <value>
                <fullName>North American - Life</fullName>
            </value>
            <value>
                <fullName>Securian - IUL</fullName>
            </value>
            <value>
                <fullName>Securian Term Life Insurance</fullName>
            </value>
            <value>
                <fullName>Transamerica</fullName>
            </value>
            <value>
                <fullName>United Healthcare</fullName>
            </value>
            <value>
                <fullName>US Fire</fullName>
            </value>
            <value>
                <fullName>Charles Schwab</fullName>
            </value>
            <value>
                <fullName>Charles Schwab - Roth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>