force-app/main/default/objects/Lead/fields/X2nd_Policy_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Policy_Issue_Date__c</fullName>
    <label>2nd Policy Issue Date</label>
    <type>Date</type>
</CustomField>