force-app/main/default/objects/Lead/fields/X3rd_Policy__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Policy__c</fullName>
    <label>3rd Policy #</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>